feat/uml and local llm

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "webpack-cli": "^4.2.0"
     },
     "dependencies": {
+        "axios": "^1.6.7",
         "bard-ai": "^2.0.3",
         "openai": "^4.24.1",
         "ora": "^8.0.1",
